# wordle

./: .gitignore  LICENSE  Makefile  README.md  backend.spec  backend_onefile.spec  browse.js  frontend.js  package.json  pyproject.toml  requirements.txt  wordle.spec  wordle_mac.spec
backend/: .gitignore  __main__.py  app.py  wordle.py
backend/http/: api.py
backend/model/: info.py  wordle.py
backend/templates/: wordle.html
icons/: make_icons.sh  wordle.icns
scripts/: .gitignore  create_words.py
static/: styles.css
templates/: wordle.html
wordle/: __main__.py  create_words.py  wordle.py
