[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "wordle"
authors = ["Tetsutaro Maruyama <tetsutaro.maruyama@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
beautifulsoup4 = "^4.10.0"
numpy = "^1.22.2"
pyinstaller = "^4.9"
requests = "^2.27.1"
Flask = "^2.0.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
